# bashtool

./: .gitignore  README.md  __init__.py  bashtool.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_bashtool.py
